Fix Overlap with DataTable Footer

--- a/mvc.scss
+++ b/mvc.scss
@@ -61,6 +61,10 @@
 			button {
 				margin: 0;
 			}
+
+			.dropdown-menu {
+				z-index: 1001;
+			}
 		}
 	}
 }
